# graphs

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  RESULTS_TIME.md  Setup.hs  bench-graph.cabal  stack.newest.yaml  stack.yaml  travis.sh
bench/: Abstract.hs  Alga.hs  AlgaRun.hs  Bench.hs  BenchAlga.hs  Best.hs  Command.hs  Common.hs  Compare.hs  Containers.hs  ContainersRun.hs  DataSize.hs  Dumb.hs  Fgl.hs  FglRun.hs  HashGraph.hs  HashGraphRun.hs  ListS.hs  Main.hs  Options.hs  Space.hs  Time.hs  Types.hs
bench/Alga/: Graph.hs  Main.hs  NonEmptyGraph.hs
bench/Containers/: Graph.hs  Main.hs
bench/Fgl/: Main.hs  PatriciaTree.hs  Tree.hs
bench/Haggle/: MSimpleBiDigraph.hs  SimpleBiDigraph.hs
bench/HashGraph/: Gr.hs  Main.hs
bench/YourLib/: Graph.hs
bench/time/Alga/: Graph.hs
results/: DATASIZE.md  README.md  SPACE.md  TIME-creation.md  TIME-extra.md  TIME.md
src/: BenchGraph.hs
src/BenchGraph/: Circuit.hs  Complete.hs  DataSize.hs  GenericGraph.hs  Mesh.hs  Named.hs  Path.hs  Space.hs  Suites.hs  Time.hs  Types.hs  Utils.hs
src/BenchGraph/GenericGraph/: Circuit.hs  Clique.hs  Complete.hs  Mesh.hs  Path.hs
src/BenchGraph/RealLife/: Graphs.hs
src/BenchGraph/RealLife/Graphs/: README.md  n3.edges  n4.edges
src/BenchGraph/Render/: Abstract.hs  Best.hs  Chart.hs  Common.hs  Result.hs  Types.hs
test/: Containers.hs  Test.hs
