name:                bench-graph
version:             0.1.0.0
synopsis:            Bench Graph
description:         Compare different graphs implementations in Haskell
license:             BSD3
license-file:        LICENSE
author:              Alexandre Moine
maintainer:          alexandre@moine.me
category:            Benchmark
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/haskell-perf/graphs.git

Flag Time
  Description: Enable time benchmarks using Criterion

Flag Space
  Description: Enable space benchmarks using Weigh

Flag Datasize
  Description: Enable datasize benchmarks using ghc-datasize

library
  exposed-modules:     BenchGraph.GenericGraph
                     , BenchGraph.GenericGraph.Path
                     , BenchGraph.GenericGraph.Mesh
                     , BenchGraph.GenericGraph.Circuit
                     , BenchGraph.GenericGraph.Complete
                     , BenchGraph.GenericGraph.Clique
                     , BenchGraph.Types
                     , BenchGraph.Utils
                     , BenchGraph.Suites
                     , BenchGraph.Named
                     , BenchGraph.Render.Abstract
                     , BenchGraph.Render.Best
                     , BenchGraph.Render.Common
                     , BenchGraph.Render.Types
  other-extensions:    ExistentialQuantification
  build-depends:       base         >= 4.7 && < 4.12,
                       deepseq      >= 1.4 && < 1.5,
                       comonad      >= 5.0.3,
                       -- Render
                       tabular    >= 0.2.2.7,
                       html       >= 1.0.1.2,
                       containers >= 0.5.5.1 && < 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(Time)
    exposed-modules:   BenchGraph.Time
    build-depends:     criterion    >= 1.4 && < 1.5

  if flag(Space)
    exposed-modules:   BenchGraph.Space
    build-depends:     weigh        >= 0.0.12

  if flag (DataSize)
    exposed-modules:   BenchGraph.DataSize
    build-depends:     ghc-datasize >= 0.2.0

  GHC-options:        -O2
                      -Wall

benchmark time 
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Time.hs
    other-modules:      Alga.Graph
                      , Containers.Graph
                      , Fgl.PatriciaTree
                      , HashGraph.Gr
                      , Command
                      , Common
                      , ListS
    build-depends:      base             >= 4.7     && < 4.12,
                        fgl              >= 5.5.4.0,
                        containers       >= 0.5.5.1 && < 0.8,
                        criterion        >= 1.4     && < 1.5,
                        hash-graph       >= 0.1.0.0,
                        algebraic-graphs >= 0.2,
                        tabular          >= 0.2.2.7,
                        unordered-containers >= 0.2.9.0,
                        array >= 0.5.1.1,
                        statistics,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

benchmark space
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Space.hs
    other-modules:      Alga.Graph
                      , Containers.Graph
                      , Fgl.PatriciaTree
                      , HashGraph.Gr
                      , Command
                      , Common
                      , ListS
    build-depends:      base             >= 4.7     && < 4.12,
                        fgl              >= 5.5.4.0,
                        containers       >= 0.5.5.1 && < 0.8,
                        hash-graph       >= 0.1.0.0,
                        algebraic-graphs >= 0.2,
                        weigh            >= 0.0.12,
                        tabular          >= 0.2.2.7,
                        unordered-containers >= 0.2.9.0,
                        array >= 0.5.1.1,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

benchmark datasize
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            DataSize.hs
    other-modules:      Alga.Graph
                      , Containers.Graph
                      , Fgl.PatriciaTree
                      , HashGraph.Gr
                      , Command
                      , Common
    build-depends:      base             >= 4.7     && < 4.12,
                        fgl              >= 5.5.4.0,
                        containers       >= 0.5.5.1 && < 0.8,
                        hash-graph       >= 0.1.0.0,
                        algebraic-graphs >= 0.2,
                        ghc-datasize     >= 0.2.0,
                        tabular          >= 0.2.2.7,
                        array >= 0.5.1.1,
                        unordered-containers >= 0.2.9.0,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

test-suite test-containers
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Containers.hs
    build-depends:  base    >= 4.7 && < 4.12,
                    doctest,
                    bench-graph,
                    containers       >= 0.5.5.1 && < 0.8,
                    array  >= 0.5.1.1
    default-language: Haskell2010

