name:                bench-graph
version:             0.1.0.0
synopsis:            Bench Graph
description:         Compare different graphs implementations in Haskell
license:             BSD3
license-file:        LICENSE
author:              Alexandre Moine
maintainer:          alexandre@moine.me
category:            Benchmark
build-type:          Custom 
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:
    base >= 4.7 && < 4.12,
    directory >= 1.3 && < 1.4,
    Cabal >= 1.10,
    text >= 1.2.3 && < 1.2.4

source-repository head
  type:     git
  location: https://github.com/haskell-perf/graphs.git

Flag Time
  Description: Enable time benchmarks using Criterion

Flag Space
  Description: Enable space benchmarks using Weigh

Flag Datasize
  Description: Enable datasize benchmarks using ghc-datasize

Flag Alga
  Description: Enable benchmarking Alga

Flag Fgl
  Description: Enable benchmarking Fgl

Flag HashGraph
  Description: Enable benchmarking HashGraph

Flag RealLife
  Description: Enable realLife graphs

Flag Chart
  Description: Enable Chart output

library
  exposed-modules:     BenchGraph.GenericGraph
                     , BenchGraph.Types
                     , BenchGraph.Utils
                     , BenchGraph.Suites
                     , BenchGraph.Named
                     , BenchGraph.Render.Abstract
                     , BenchGraph.Render.Best
                     , BenchGraph.Render.Common
                     , BenchGraph.Render.Types
  other-extensions:    ExistentialQuantification
  build-depends:       base         >= 4.7 && < 4.12,
                       deepseq      >= 1.4 && < 1.5,
                       comonad      >= 5.0.3,
                       -- Render
                       tabular     >= 0.2.2.7,
                       html        >= 1.0.1.2,
                       containers  >= 0.5.5.1 && < 0.8
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(Time)
    exposed-modules:   BenchGraph.Time
    build-depends:     criterion    >= 1.4 && < 1.5

  if flag(Space)
    exposed-modules:   BenchGraph.Space
    build-depends:     weigh        >= 0.0.12

  if flag(DataSize)
    exposed-modules:   BenchGraph.DataSize
    build-depends:     ghc-datasize >= 0.2.0

  if flag(RealLife)
    exposed-modules:   BenchGraph.RealLife.Graphs
    other-modules:     BenchGraph.RealLife.Generated
    cpp-options:       -DREALLIFE

  if flag(Chart)
    build-depends:     Chart       >= 1.9 && < 1.10,
                       Chart-cairo >= 1.9 && < 1.10
    exposed-modules:   BenchGraph.Render.Chart

  GHC-options:        -O2
                      -Wall

benchmark time
  if flag(Time)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Time.hs
    other-modules:      Containers.Graph
                      , Command
                      , ListS
    build-depends:      base             >= 4.7     && < 4.12,
                        containers       >= 0.5.5.1 && < 0.8,
                        criterion        >= 1.4     && < 1.5,
                        tabular          >= 0.2.2.7,
                        unordered-containers >= 0.2.9.0,
                        array >= 0.5.1.1,
                        statistics,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

    if flag(Alga)
      other-modules:    Alga.Graph
      build-depends:    algebraic-graphs >= 0.2
      cpp-options:      -DALGA

    if flag(Fgl)
      other-modules:    Fgl.PatriciaTree
      build-depends:    fgl              >= 5.5.4.0
      cpp-options:      -DFGL

    if flag(HashGraph)
      other-modules:    HashGraph.Gr
      build-depends:    hash-graph       >= 0.1.0.0
      cpp-options:      -DHASHGRAPH

    if flag(Chart)
      cpp-options:       -DCHART

  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

benchmark space
  if flag(Space)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Space.hs
    other-modules:      Containers.Graph
                      , Command
                      , ListS
    build-depends:      base             >= 4.7     && < 4.12,
                        containers       >= 0.5.5.1 && < 0.8,
                        weigh            >= 0.0.12,
                        tabular          >= 0.2.2.7,
                        unordered-containers >= 0.2.9.0,
                        array >= 0.5.1.1,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

    if flag(Alga)
      other-modules:    Alga.Graph
      build-depends:    algebraic-graphs >= 0.2
      cpp-options:      -DALGA

    if flag(Fgl)
      other-modules:    Fgl.PatriciaTree
      build-depends:    fgl              >= 5.5.4.0
      cpp-options:      -DFGL

    if flag(HashGraph)
      other-modules:    HashGraph.Gr
      build-depends:    hash-graph       >= 0.1.0.0
      cpp-options:      -DHASHGRAPH

    if flag(Chart)
      cpp-options:       -DCHART

  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

benchmark datasize
  if flag(Datasize)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            DataSize.hs

    other-modules:      Alga.Graph
                      , Containers.Graph
                      , Fgl.PatriciaTree
                      , HashGraph.Gr
                      , Command
                      , ListS
    build-depends:      base             >= 4.7     && < 4.12,
                        fgl              >= 5.5.4.0,
                        containers       >= 0.5.5.1 && < 0.8,
                        hash-graph       >= 0.1.0.0,
                        algebraic-graphs >= 0.2,
                        ghc-datasize     >= 0.2.0,
                        tabular          >= 0.2.2.7,
                        array >= 0.5.1.1,
                        unordered-containers >= 0.2.9.0,
                        optparse-applicative,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall
  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

test-suite test-containers
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Test.hs
    build-depends:  base    >= 4.7 && < 4.12,
                    doctest,
                    bench-graph,
                    containers  >= 0.5.5.1 && < 0.8,
                    array  >= 0.5.1.1,
                    fgl >= 5.5.4.0,
                    unordered-containers >= 0.2.9.0,
                    hash-graph >= 0.1.0.0
    default-language: Haskell2010

