name:                bench-graph
version:             0.1.0.0
synopsis:            Bench Graph
description:         Compare different graphs implementations in Haskell
license:             BSD3
license-file:        LICENSE
author:              Alexandre Moine
maintainer:          alexandre@moine.me
category:            Benchmark
build-type:          Custom
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

custom-setup
  setup-depends:
    base      >= 4.7   && < 4.13,
    directory >= 1.3   && < 1.4,
    text      >= 1.2.3 && < 1.2.4,
    Cabal     >= 1.10

source-repository head
  type:     git
  location: https://github.com/haskell-perf/graphs.git

Flag Time
  Description: Enable time benchmarks using Criterion

Flag Space
  Description: Enable space benchmarks using Weigh

Flag Datasize
  Description: Enable datasize benchmarks using ghc-datasize

Flag Alga
  Description: Enable benchmarking Alga

Flag Fgl
  Description: Enable benchmarking Fgl

Flag HashGraph
  Description: Enable benchmarking HashGraph

Flag RealLife
  Description: Enable realLife graphs
  Default:     False

Flag Chart
  Description: Enable Chart output

library
  exposed-modules:     BenchGraph.GenericGraph
                     , BenchGraph.Types
                     , BenchGraph.Utils
                     , BenchGraph.Suites
                     , BenchGraph.Named
                     , BenchGraph.Render.Abstract
                     , BenchGraph.Render.Best
                     , BenchGraph.Render.Common
                     , BenchGraph.Render.Types
                     , BenchGraph.Render.Result
  other-extensions:    ExistentialQuantification
  build-depends:       base         >= 4.7    && < 4.13,
                       deepseq      >= 1.4    && < 1.5,
                       comonad      >= 5.0.3  && < 5.1,
                       -- Render
                       tabular     >= 0.2.2.7 && < 0.2.3,
                       html        >= 1.0.1.2 && < 1.0.2,
                       containers  >= 0.5.5.1 && < 0.8,
                       aeson       >= 1.3.0.0 && < 1.4.3
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(Time)
    exposed-modules:   BenchGraph.Time
    build-depends:     criterion             >= 1.5 && < 1.6,
                       criterion-measurement >= 0.1 && < 0.2

  if flag(Space)
    exposed-modules:   BenchGraph.Space
    build-depends:     weigh        >= 0.0.12

  if flag(DataSize)
    exposed-modules:   BenchGraph.DataSize
    build-depends:     ghc-datasize >= 0.2.0

  if flag(RealLife)
    exposed-modules:   BenchGraph.RealLife.Graphs
    other-modules:     BenchGraph.RealLife.Generated
    cpp-options:       -DREALLIFE

  if flag(Chart)
    build-depends:     Chart       >= 1.9 && < 1.10,
                       Chart-cairo >= 1.9 && < 1.10
    exposed-modules:   BenchGraph.Render.Chart

  GHC-options:        -O2
                      -Wall

benchmark time
  if flag(Time)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Time.hs
    other-modules:      Containers.Graph
                      , Command
                      , ListS
    build-depends:      base                  >= 4.7      && < 4.13,
                        containers            >= 0.5.5.1  && < 0.8,
                        criterion             >= 1.5      && < 1.6,
                        criterion-measurement >= 0.1      && < 0.2,
                        tabular               >= 0.2.2.7  && < 0.2.3,
                        unordered-containers  >= 0.2.9.0  && < 0.2.10,
                        array                 >= 0.5.3.0  && < 0.5.4,
                        statistics            >= 0.14.0.2 && < 0.14.1,
                        optparse-applicative  >= 0.14.3.0 && < 0.14.4,
                        aeson                 >= 1.3.0.0  && < 1.4.3,
                        bench-graph

    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

    if flag(Alga)
      other-modules:    Alga.Graph
      build-depends:    algebraic-graphs >= 0.2     && < 0.4
      cpp-options:      -DALGA

    if flag(Fgl)
      other-modules:    Fgl.PatriciaTree
      build-depends:    fgl              >= 5.6.0.0 && < 5.6.0.1
      cpp-options:      -DFGL

    if flag(HashGraph)
      other-modules:    HashGraph.Gr
      build-depends:    hash-graph       >= 0.1.0.0 && < 0.1.0.1
      cpp-options:      -DHASHGRAPH

    if flag(Chart)
      cpp-options:      -DCHART

  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

benchmark space
  if flag(Space)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Space.hs
    other-modules:      Containers.Graph
                      , Command
                      , ListS
    build-depends:      base                 >= 4.7      && < 4.13,
                        containers           >= 0.5.5.1  && < 0.8,
                        weigh                >= 0.0.12   && < 0.0.13,
                        tabular              >= 0.2.2.7  && < 0.2.3,
                        unordered-containers >= 0.2.9.0  && < 0.2.10,
                        array                >= 0.5.3.0  && < 0.5.4,
                        optparse-applicative >= 0.14.3.0 && < 0.14.4,
                        aeson                >= 1.3.0.0  && < 1.4.1,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall

    if flag(Alga)
      other-modules:    Alga.Graph
      build-depends:    algebraic-graphs >= 0.2     && < 0.4
      cpp-options:      -DALGA

    if flag(Fgl)
      other-modules:    Fgl.PatriciaTree
      build-depends:    fgl              >= 5.6.0.0 && < 5.6.0.1
      cpp-options:      -DFGL

    if flag(HashGraph)
      other-modules:    HashGraph.Gr
      build-depends:    hash-graph       >= 0.1.0.0 && < 0.1.0.1
      cpp-options:      -DHASHGRAPH

    if flag(Chart)
      cpp-options:      -DCHART

  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

benchmark datasize
  if flag(Datasize)
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            DataSize.hs

    other-modules:      Alga.Graph
                      , Containers.Graph
                      , Fgl.PatriciaTree
                      , HashGraph.Gr
                      , Command
                      , ListS
    build-depends:      base                 >= 4.7      && < 4.13,
                        fgl                  >= 5.6.0.0  && < 5.6.0.1,
                        containers           >= 0.5.5.1  && < 0.8,
                        hash-graph           >= 0.1.0.0  && < 0.1.0.1,
                        algebraic-graphs     >= 0.2      && < 0.4,
                        ghc-datasize         >= 0.2.0    && < 0.2.1,
                        tabular              >= 0.2.2.7  && < 0.2.3,
                        array                >= 0.5.3.0  && < 0.5.4,
                        unordered-containers >= 0.2.9.0  && < 0.2.10,
                        optparse-applicative >= 0.14.3.0 && < 0.14.4,
                        bench-graph
    default-language:   Haskell2010
    GHC-options:        -O2
                        -Wall
  else
    hs-source-dirs:     bench
    type:               exitcode-stdio-1.0
    main-is:            Dumb.hs
    build-depends:      base
    default-language:   Haskell2010

test-suite test-containers
    type:           exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:        Test.hs
    build-depends:  base                 >= 4.7     && < 4.13,
                    doctest              >= 0.16.0  && < 0.17,
                    containers           >= 0.5.5.1 && < 0.8,
                    array                >= 0.5.3.0 && < 0.5.4,
                    unordered-containers >= 0.2.9.0 && < 0.2.10,
                    fgl                  >= 5.6.0.0 && < 5.6.0.1,
                    hash-graph           >= 0.1.0.0 && < 0.1.0.1,
                    bench-graph
    default-language: Haskell2010
